style.css
body {
    font-family: "Roboto", sans-serif;
    display: flex;
    flex-direction: column;
    height: 100vh;
}

.header {
    flex: 5;
    display: flex;
    justify-content: center;
}

.information {
    flex: 4;
}


.header .container {
    width: 1300px;
}

.hero .content, .hero .image {
    height: 250px;
}

.footer {
    display: flex;
    align-items: center;
    flex: 1;
    justify-content: center;
}

.footer, .header{
    color: white;
    background-color: #d9282f;
}

.links {
    display: flex;
    gap: 16px;
    list-style: none;
}

.logo{
    height: 80px;
    width: auto;
}

.hero{
    display: flex;
}

.hero .text{
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
}

.header .links, .hero .subtext{
    font-size: 18px;
    color: #E5E7EB;
}

button{
    background-color: #f8de08;
    color: #1F2937;
    border-radius: 8px;
    font-weight: bold;
}

.header .button {
    border: none;
    padding: 6px 18px;
}

.platter {
    height: 400px;
    width: auto;
}

.logo-links{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.item .image {
    width: 150px;
    height: auto;
    border: 4px solid #D9282F;
    border-radius: 25px;
}

.title {
    font-size: 36px;
    font-weight: 800;
    text-align: center;
  }

.information .container {
  display: flex;
  margin-top: 32px;
  justify-content: center;
  gap: 52px;
}

.item {
    max-width: 250px;
    text-align: center;
}
  
.testimonial {
    flex: 3;
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.testimonial .text {
    max-width: 1150px;
    font-size: 36px;
    font-weight: light;
    font-style: italic;
    color: #1F2937;
}

.testimonial .subtext {
    max-width: 1110px;
    font-weight: bold;
    font-size: 20px;
    color: #1F2937;
    display: flex;
    justify-content: flex-end;
}

.action{
    flex: 2;
    display: flex;
    justify-content: center;
    align-items: center;
}

.action .container {
    display: flex;
    background-color: #f8de08;
    color: #1F2937;
    border-radius: 10px;
    justify-content: center;
    align-items: center;
    padding: 35px 90px;
}

.action .container-two {
    width: 500px;
}

.action .text {
    font-size: 17px;
    font-weight: bold;
}

.action .subtext {
    display: flex;
    justify-content: space-between;
}

.action .sign-up-button {
    border: 2px solid #1F2937;
    padding: 6px 18px;
}

